kube-deploy/stateful-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateful-deployment
  labels:
    app: stateful
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful
  template:
    metadata:
      labels:
        app: stateful
    spec:
      containers:
      - name: stateful
        image: gcr.io/intense-howl-207913/stateful:v2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: stateful
          mountPath: /tmp
      volumes:
      - name: stateful
        persistentVolumeClaim:
          claimName: stateful-claim
