kube-deploy/stateless-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateless-deployment
  labels:
    app: stateless
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stateless
  template:
    metadata:
      labels:
        app: stateless
    spec:
      containers:
      - name: stateless
        image: docker.io/roger1349/stateless:v
        ports:
        - containerPort: 8080
