kube-deploy/gateway-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 2869
    targetPort: 2869
