kube-deploy/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo
spec:
  ports:
    - port: 2869
      targetPort: 2869
  selector:
    name: mongo
