kube-deploy/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    port: 2869
  selector:
    app: mysql-app
