kube-deploy/stateful-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: stateful
spec:
  selector:
    app: stateful
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
