kube-deploy/stateless-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: stateless
spec:
  selector:
    app: stateless
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
