kube-deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: test
spec:
 rules:
 - http:
     paths:
     - path: /metrics
       backend:
         serviceName: gateway
         servicePort: 8080
   host: radzhiv.microservices.review
